[package]
name = "jsonxf"
edition = "2015"
version = "1.1.2"
authors = ["pete gamache <pete@gamache.org>"]
description = "A fast JSON pretty-printer and minimizer."
homepage = "https://github.com/gamache/jsonxf"
repository = "https://github.com/gamache/jsonxf"
keywords = ["json", "pretty-print", "pretty", "minimize"]
categories = ["encoding", "rendering", "text-processing", "value-formatting"]
license = "MIT"

[dependencies]
getopts = { version = "0.2", optional = true }
memchr = "2.7.4"

[features]
default = ["dep:getopts"]

[lib]
name = "jsonxf"
path = "src/jsonxf.rs"

[[bin]]
name = "jsonxf"
path = "src/main.rs"
doc = false

